Client/style/gameRoom.css
body {
    margin:0;
    padding:0;
    background: linear-gradient(45deg, green, transparent 50%, transparent),
                linear-gradient(135deg, red, transparent 50%, transparent),
                linear-gradient(-135deg, blue, transparent 50%, transparent),
                linear-gradient(-45deg, yellow, transparent 50%, transparent);
    background-blend-mode: overlay;
    background-size: 100% 100%;
    background-position: top left, top right, bottom right, bottom left, center center;
    overflow:hidden;
}

#card-container {
    /* Container for the user's cards, should be placed at the bottom of the page */
    position:absolute;
    bottom:0;
    width:100%;
    height:20%;
    max-height:200px;
    background-color:rgba(0, 0, 0, 0.253);

    display: flex;
    align-items: center;
    justify-content: center;
    overflow-x:auto;
}

#player-container {
    /* Container for other players */
    position:absolute;
    left:0;
    top:min(20%, 200px);
    bottom:min(20%, 200px);
    width:20%;
    max-width:200px;
    background-color:rgba(75, 75, 75, 0.5);
}

/* Hide scrollbar for Chrome, Safari and Opera */
#player-container::-webkit-scrollbar {
    display: none;
}
  
  /* Hide scrollbar for IE, Edge and Firefox */
#player-container {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

#table-container {
    /* The pane for the current card */
    position:absolute;
    left:0;
    right:0;
    top:0;
    bottom:0;
    margin:auto;

    width:30%;

    height:25%;

    overflow:hidden;
}

#opposing-player-container {
    /* Contains the deck and the current card */
    position:absolute;
    top:0;
    width:100%;
    height:20%;
    max-height:200px;
    background-color:rgba(0, 0, 0, 0.253);

    display: flex;
    align-items: center;
    justify-content: center;
}

#deck-container {
    /* Contains the deck */
    margin:none;
    padding:none;
    height:100%;
    width:50%;
    float:left;

    display: flex;
    align-items: center;
    justify-content: center;
}

#current-card-container {
    /* All cards of either the next player (if user is playing) or the current player */
    margin:none;
    padding:none;
    height:100%;
    width:50%;
    float:left;

    display: flex;
    align-items: center;
    justify-content: center;
}

.uno-card {
    /* An uno card! */
    max-width:100%;
    max-height:100%;
}

/* Glow effect: https://codersblock.com/blog/creating-glow-effects-with-css/ */
#card-container .uno-card:only-child {
    filter:brightness(100%); /* Override the darkness of the card */
    box-shadow:
    0 0 60px 30px #fff,  /* inner white */
    0 0 100px 60px #f0f, /* middle magenta */
    0 0 140px 90px #0ff; /* outer cyan */
}

#opposing-player-container .uno-card:only-child {
    box-shadow:
    0 0 60px 30px #fff,  /* inner white */
    0 0 100px 60px #f0f, /* middle magenta */
    0 0 140px 90px #0ff; /* outer cyan */
}

.dark {
    filter: brightness(20%);
    cursor: default !important;
}

#color-picker {
    position: absolute;
    width: 300px;
    height: 300px;
    z-index:9999;
    cursor:pointer;
    visibility:hidden; /* Display when user is picking a color */

    /* Place it directly on top of the table FIXME make this better by making table a class */
    position:absolute;
    left:0;
    right:0;
    top:0;
    bottom:0;
    margin:auto;

    width:30%;

    height:25%;

    overflow:hidden;
}

/* Inner divs */
#red {
    position: absolute;
    top: 0;
    left: 0;
    width: 50%;
    height: 50%;
    background-color: #d40000;
}

#blue {
    position: absolute;
    top: 0;
    right: 0;
    width: 50%;
    height: 50%;
    background-color: #2a7fff;
}

#yellow {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 50%;
    height: 50%;
    background-color: #ffcc00;
}

#green {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 50%;
    height: 50%;
    background-color: #2ca05a;
}

.modal {
    visibility:hidden;
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius:10px;
}
  
.modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 450px; /* Could be more or less, depending on screen size */
}

.player-bar {
    background-color: #00000079;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    color:rgba(255, 255, 255);
    text-align:left;
    width: 80%;
    margin-top:5px;
    margin-bottom:5px;
    padding:5px;
    font-weight:bolder;
}

/* Glow effect: https://codersblock.com/blog/creating-glow-effects-with-css/ */
.glow {
    box-shadow:
    0 0 60px 30px #fff,  /* inner white */
    0 0 100px 60px #f0f, /* middle magenta */
    0 0 140px 90px #0ff; /* outer cyan */
}

